# AI-Rollout-Training-OS

./: .env.example  .gitignore  Dockerfile  PLAYBOOK.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
ai_rollout_os/: __init__.py  main.py
docs/: ARCHITECTURE.md  CODEX_PROMPT.md  COGNITION_MANIFEST.md  DECISION_LOG.md  EVIDENCE_INDEX.md  IMPLEMENTATION_CONTRACT.md  IMPLEMENTATION_JOURNAL.md  PROJECT_PLAN.md  backup_restore.md  customer_discovery.md  entropy_core_gensyn_integration.md  ga_readiness.md  implementation_success_plan.md  incident_response.md  migration_rehearsal.md  open_source_research_protocol.md  packaging.md  permission_simulator_workshop_pack.md  pilot_readiness.md  pilot_success_rubric.md  procurement_packet.md  product_maturity_roadmap.md  product_maturity_task_graph.md  release_notes.md  retrieval_eval.md  security_review.md  slo.md  solo_showcase_plan.md  spec.md  tasks.md  upgrade_guide.md
frontend/: __init__.py  app_shell.py
hooks/: guard_files.sh  guard_phase_boundary.sh  log_bash.sh  save_checkpoint.sh
migrations/: env.py
prompts/: ORCHESTRATOR.md  STRATEGIST.md
reference/: CODEX_ONLY_WORKFLOW.md
scripts/: capture_permission_simulator_demo.py  eval.py  eval_feedback.py  load_test.py
templates/: PROJECT_BRIEF.md
tests/: test_app_factory.py  test_backup_restore_doc.py  test_baseline.py  test_ci_workflow.py  test_codex_prompt_state.py  test_customer_discovery_doc.py  test_deployment_files.py  test_ga_readiness_doc.py  test_health.py  test_implementation_success_plan_doc.py  test_slo_doc.py  (+33 more)
(+178 files in other folders)
