[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "ai-rollout-training-os"
version = "0.1.0"
description = "Role-based AI rollout training operating system."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13,<2",
    "fastapi>=0.115,<1",
    "pgvector>=0.3,<1",
    "psycopg[binary]>=3.2,<4",
    "sqlalchemy>=2.0,<3",
    "tiktoken>=0.7,<1",
    "uvicorn[standard]>=0.30,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["ai_rollout_os"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["--import-mode=importlib"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["ai_rollout_os", "frontend", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
